2002-02-10 Daniel Horn <hellcatv@hotmail.com>
	* Removed special case for subunits (eg pseudo 1 xtra refcount)
	* Streamlined UnitIterator
	* Added useful functions for unit iterators
	* Change BSP's to return a (nonconst) unit so subunits may be directly damaged
	* Added constant iterators and fast iterators
	* un_iter is standard un_fiter is the fast iterattor that doesn't check the Killed() value
	* un_kiter is the standard constant iterator and un_fkiter is the fast constant iterator to go down unit queues
	* If you get odd segfaults please tell me backtrace
	* Added autopilot feature (F9 and F10)
	
2002-02-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* test mission for dana
	* no CXXFLAGS/optimization for src/cmd/script/c_alike

	
2002-02-09 Daniel Horn <hellcatv@hotmail.com>
	* Fixed absolutely horrible ucref 'smart pointer' bug with subunits
	* Added some original mining bases by DMJC
	

2002-02-08 Daniel Horn <hellcatv@hotmail.com>
	* Added Day/Year tag to system
	* Removed velocity tag from system (besides it should have been speed...misleading)
	* Added ability to slow down simulations in other star systems so they won't bog down the game
	
2002-02-07 Daniel Horn <hellcatv@hotmail.com>
	* Completed VIEW VDU segment
	* Completed Asteroids that don't crash with anything but units
	* Worked on Debug options for geometry-corrupting vertex arrays
	* Finished Asteroid generator
	* Added more camera views
	* Added more VDU options
	* Fixed Explosions (sometimes they wouldn't show up. now they do)
	* Added Wormholes as an option
	
2002-02-06 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* set the color of planets in the radar to blue
	* begun to write a new targetting scheme
	  (not working, not used yet)

	
2002-02-06 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* various improvements on missions:
	  - moved benchmarking/gametime from main_loop.cpp to director
	  - message display shows the time when the message came