@@ -2,7 +2,7 @@
 
 <HTML>
 <HEAD>
-	<TITLE>Vega Strike</TITLE>
+        <TITLE>Vega Strike</TITLE>
 </HEAD>
 
 <BODY BACKGROUND="bg1.jpg" bgcolor="#000000" text="#C0C0C0" link="#000000" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
@@ -139,11 +139,12 @@ Credits <font color="#006834">
 <TD></TD>
 </TR>
 <TR>
-<TD BGCOLOR="#c6c6c6"><font color="#000000">James T Richardson</TD>
+<TD BGCOLOR="#c6c6c6"><font color="#000000">Sabarok Aresh</TD>
 
-<TD>Windows Development</TD>
+<TD>GUI-Designer</TD>
+<TD>VSSetup Tool, Mission Selector</TD>
 
-<TD></TD>
+<TD>re-writes Mission Selector to use glut</TD>
 </TR>
 
 </TABLE>
