@@ -59,7 +59,14 @@ latest Vegastrike snapshot:
   <a href="mailto:alexannika@users.sourceforge.net">me</a>
  if it works or not )</FONT></FONT></FONT>
 
-
+<p>
+Starting the snapshot:
+<p>
+go to the data directory and then:
+<p>
+./vegastrike.sh mission/earth_patrol1.mission
+<p>
+Or use any other mission file from data/mission as an argument to Vegastrike
 
 <BR><BR><BR>
 <p><p>
