@@ -2,12 +2,12 @@
 
 <HTML>
 <HEAD>
-	<TITLE>Vega Strike</TITLE>
+        <TITLE>Vega Strike</TITLE>
 </HEAD>
 
 <!-- frames -->
 <frameset cols="90,*" frameborder="0" border=0 framespacing="0" border="0">
-    <frame name="menu" src="menn7.html" marginwidth="0" marginheight="0" scrolling="no" frameborder="no" noresize>
+    <frame name="menu" src="menu.html" marginwidth="0" marginheight="0" scrolling="no" frameborder="no" noresize>
     <frame name="main" src="main.html" marginwidth="0" marginheight="0" scrolling="auto" frameborder="no" noresize>
 </frameset>
 
