@@ -5,7 +5,7 @@
    <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
    <title>Vegastrike - Installing</title>
 </head>
-<BODY  bgcolor="#000000" text="#C0C0C0" link="#00BB33" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
+<body text="#C0C0C0" bgcolor="#000000" link="#00BB33" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
 
 <h1>
 <a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
@@ -27,14 +27,11 @@ tar file and the latest linux binary
 <p>5. then cd to the data directory
 <p>6. to start vegastrike, type
 <br>&nbsp;&nbsp;&nbsp; ./vegastrike.sh &lt;mission-file>
-<p>&nbsp;&nbsp;&nbsp; Examples:&nbsp; ./vegastrike.sh&nbsp;&nbsp;&nbsp;&nbsp;
-(starts the default mission)
+<p>&nbsp;&nbsp;&nbsp; Examples:&nbsp; ./vegastrike.sh mission/earth_patrol1.mission
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ./vegastrike.sh mission/ships_confed1.mission
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-./vegastrike.sh mission/test/test4.mission
-<p>Please <a href="mailto:alexannika@users.sourceforge.net">send me Email</a>
-if you're having any problems.
+<p>&nbsp; Please <a href="mailto:alexannika@users.sourceforge.net">send
+me Email</a> if you're having any problems.
 <br>&nbsp;
 <h2>
 Installing Vegastrike on Win32:</h2>
