@@ -3,78 +3,22 @@
 <HTML>
 <HEAD>
         <TITLE>Vega Strike</TITLE>
-        <script>
-<!--
-
-if (document.images) {
-  image1on = new Image();
-  image1on.src = "2on.jpg";
-
-  image2on = new Image();
-  image2on.src = "3on.jpg";
-
-  image3on = new Image();
-  image3on.src = "4on.jpg";
-
-  image4on = new Image();
-  image4on.src = "5on.jpg";
-
-  image5on = new Image();
-  image5on.src = "6on.jpg";
-
-  image6on = new Image();
-  image6on.src = "7on.jpg";
-
-  image1off = new Image();
-  image1off.src = "2off.jpg";
-
-  image2off = new Image();
-  image2off.src = "3off.jpg";
-
-  image3off = new Image();
-  image3off.src = "4off.jpg";
-
-  image4off = new Image();
-  image4off.src = "5off.jpg";
-
-  image5off = new Image();
-  image5off.src = "6off.jpg";
-
-  image6off = new Image();
-  image6off.src = "7off.jpg";
-
-}
-
-function turnOn(imageName) {
-  if (document.images) {
-    document[imageName].src = eval(imageName + "on.src");
-  }
-}
-
-function turnOff(imageName) {
-  if (document.images) {
-    document[imageName].src = eval(imageName + "off.src");
-  }
-}
-
-// -->
-</script>
 </HEAD>
 
 <BODY bgcolor="#000000" text="#C0C0C0" link="#00BB5E" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px" marginheight=0 marginwidth=0>
 <table border=0 cellpadding=0 cellspacing=0>
 <tr><td><img src="1.jpg"></td></tr>
-<tr><td><a target="main" href="main.html" onMouseOver="turnOn('image1')" onMouseOut="turnOff('image1')"><img name="image1" src="2off.jpg" border=0></a></td></tr>
-<tr><td><a target="main" href="pics.html" onMouseOver="turnOn('image2')" onMouseOut="turnOff('image2')"><img name="image2" src="3off.jpg"border=0></a></td></tr>
-<tr><td><a target="main" href="download.html" onMouseOver="turnOn('image3')" onMouseOut="turnOff('image3')"><img name="image3" src="4off.jpg" border=0></a></td></tr>
-<tr><td><a target="main" href="texturizer/index.html" onMouseOver="turnOn('image4')" onMouseOut="turnOff('image4')"><img name="image4" src="5off.jpg" border=0></a></td></tr>
+<tr><td><a target="main" href="main.html" >News</a></td></tr>
+<tr><td><a target="main" href="pics.html" >Screenshots</a></td></tr>
+<tr><td><a target="main" href="download.html" >Download</a></td></tr>
+<tr><td><a target="main" href="texturizer/index.html" >Texturizer Howto</a></td></tr>
 <tr><td><a target="main" href="installing.html" >Installing</td></tr>
 <tr><td><a target="main" href="playing.html" >Playing</a></td></tr>
 <tr><td><a target="main" href="alex-index.html" >Alexander's Page</a></td></tr>
 <tr><td><a target="main" href="links.html" >Links</a></td></tr>
 <tr><td><a target="main" href="http://sourceforge.net/projects/vegastrike/" >SF Project Page</a></td></tr>
-<tr><td><a target="main" href="credits.html" onMouseOver="turnOn('image5')" onMouseOut="turnOff('image5')"><img name="image5" src="6off.jpg" border=0></a></td></tr>
-<tr><td><a target="main" href="email.html" onMouseOver="turnOn('image6')" onMouseOut="turnOff('image6')"><img name="image6" src="7off.jpg" border=0></a></td></tr>
+<tr><td><a target="main" href="credits.html"> Credits </a></td></tr>
+<tr><td><a target="main" href="email.html" >Email</a></td></tr>
 <tr><td><img src="8.jpg"></td></tr>
 </table>
 
