@@ -5,7 +5,7 @@
    <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
    <title>Vegastrike - Playing Howto</title>
 </head>
-<BODY  bgcolor="#000000" text="#C0C0C0" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight=0 marginwidth=0>
+<body text="#C0C0C0" bgcolor="#000000" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
 
 <h1>
 <a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
@@ -18,8 +18,7 @@ Index</a></font></h1>
 Starting Vegastrike:</h2>
 to start Vegastrike, you have to cd to the data directory and then:
 <p>./vegastrike.sh &lt;mission-name>
-<p>Examples:&nbsp;&nbsp;&nbsp; ./vegastrike.sh&nbsp;&nbsp;&nbsp;&nbsp;
-(starts the default mission)
+<p>Exaamples:&nbsp; ./vegastrike.sh mission/earth_patrol1.mission
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ./vegastrike.sh mission/ships_confed1.mission
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
