@@ -207,6 +207,7 @@ void VegaConfig::initCommandMap(){
   command_map["FireKey"]=FireKeyboard::FireKey ;
   command_map["MissileKey"]=FireKeyboard::MissileKey ;
   command_map["TargetKey"]=FireKeyboard::TargetKey ;
+  command_map["PickTargetKey"]=FireKeyboard::PickTargetKey ;
   command_map["NearestTargetKey"]=FireKeyboard::NearestTargetKey ;
   command_map["ThreatTargetKey"]=FireKeyboard::ThreatTargetKey ;
   command_map["WeapSelKey"]=FireKeyboard::WeapSelKey ;
